chore: [automated] Update util to use @ava/typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
 		"examples",
 		"scripts"
 	],
-	"include": [
-		"./src/**/*"
-	]
+    "include": [
+    "./src/**/*",
+    "./test/**/*"
+    ]
 }
